<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_chicago"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:drawableLeft="@drawable/chicago_pizza_main"
        android:onClick="showChicago"
        android:text="@string/main_chicago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ny"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="136dp"
        android:drawableLeft="@drawable/ny_pizza_main"
        android:text="@string/main_ny"
        android:onClick="showNY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_chicago" />

    <Button
        android:id="@+id/btn_store"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="136dp"
        android:drawableLeft="@drawable/store_order"
        android:text="@string/main_store_order"
        android:onClick="showStoreOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_ny" />

    <Button
        android:id="@+id/btn_current"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="136dp"
        android:drawableLeft="@drawable/current_order"
        android:onClick="showCurrent"
        android:text="@string/main_current_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_store" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="431dp"
        android:layout_height="456dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




